--- a/WordList.UpdateDb.fsproj
+++ b/WordList.UpdateDb.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Models.fs" />
     <Compile Include="messages\ProcessorMessage.fs" />
     <Compile Include="messages\DbProcessorMessage.fs" />
     <Compile Include="messages\ValidationProcessorMessage.fs" />
